# recognizer-server-old

./: .dockerignore  .gitignore  CMakeLists.txt  COPYING  Dockerfile  README.md  build.sh  db.c  db.h  dedup.c  dedup.h  docker-compose.yml  ht.c  ht.h  index.c  index.h  main.c  recognize.c  recognize.h  rh.h  run.sh  run_indexing.sh  run_normal.sh  stop.sh  text.c  text.h
other/docker/: docker-compose.yml
other/docker/recognizer-server/: Dockerfile
src/: blacklist.c  blacklist.h  db.c  db.h  dedup.c  dedup.h  defines.h  doidata.c  doidata.h  fuzzysearch.c  fuzzysearch.h  ht.c  ht.h  index.c  index.h  journal.c  journal.h  log.h  main.c  recognize.c  recognize.h  recognize_abstract.c  recognize_abstract.h  recognize_authors.c  recognize_authors.h  recognize_fonts.c  recognize_fonts.h  recognize_jstor.c  recognize_jstor.h  recognize_pages.c  recognize_pages.h  recognize_title.c  recognize_title.h  recognize_various.c  recognize_various.h  rh.c  rh.h  text.c  text.h  word.c  (+3 more)
static/: panel.html
